Frontend login y registro
Añadido recurso de fondo redondeado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="members_role">Rol de los miembros</string>
     <string name="go_back">Volver al menu principal</string>
     <string name="complete_task">Completar tarea</string>
+    <string name="name">Nombre</string>
 </resources>
