--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="go_back">Volver al menu principal</string>
     <string name="complete_task">Completar tarea</string>
     <string name="name">Nombre</string>
+    <string name="delete_house">Borrar hogar</string>
 </resources>
