--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="email">Correo</string>
     <string name="password">Contraseña</string>
     <string name="confirm_password">Confirmar contraseña</string>
-    <string name="log_in">Iniciar sesion</string>
+    <string name="log_in">Iniciar sesión</string>
     <string name="forgot_password">¿Olvidaste tu contraseña?</string>
     <string name="no_account">¿No tienes una cuenta?</string>">
     <string name="register">Registrarse</string>
